Fix of native image support.